samples/_failures_safe/1761488021_bf7d2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dfbae563.c: In function ‘main’:
./samples/SAFE/__tmp_dfbae563.c:157:13: error: ‘start’ undeclared (first use in this function)
  157 |     dfs(&g, start
      |             ^~~~~
./samples/SAFE/__tmp_dfbae563.c:157:13: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_dfbae563.c:157:18: error: expected ‘)’ at end of input
  157 |     dfs(&g, start
      |        ~         ^
      |                  )
./samples/SAFE/__tmp_dfbae563.c:157:5: error: expected declaration or statement at end of input
  157 |     dfs(&g, start
      |     ^~~
